List tables API
Allow listing of tables from given Postgres schemas. This is to be
extended with sync and import status.
