# api/design/api.go
@@ -39,11 +39,62 @@ var _ = Service("Health", func() {
 			Attribute("status", String, "Status of the API", func() {
 				Enum("healthy")
 			})
-			Required("status")
+			Required(
+				"status",
+			)
 		})
 
 		HTTP(func() {
 			GET("/check")
 		})
 	})
+})
+
+var _ = Service("Tables", func() {
+	Description("Expose Postgres tables, and their import/sync status")
+
+	HTTP(func() {
+		Path("/tables")
+	})
+
+	Method("List", func() {
+		Description("List all tables")
+
+		Payload(func() {
+			Attribute("schema", String, func() {
+				Description("Comma separated list of Postgres schemas to filter by")
+				Example("public")
+				Example("public,payments")
+				Default("public")
+			})
+			Required(
+				"schema",
+			)
+		})
+
+		Result(ArrayOf(Table))
+
+		HTTP(func() {
+			GET("/")
+			Response(StatusOK)
+			Params(func() {
+				Param("schema")
+			})
+		})
+	})
+})
+
+var Table = Type("Table", func() {
+	Description("Postgres table, with sync and import status")
+	Attribute("schema", String, "Postgres table schema", func() {
+		Example("public")
+	})
+	Attribute("name", String, "Postgres table name", func() {
+		Example("payments")
+	})
+
+	Required(
+		"schema",
+		"name",
+	)
 })
