# api/gen/http/tables/server/paths.go
@@ -1,0 +1,13 @@
+// Code generated by goa v3.2.6, DO NOT EDIT.
+//
+// HTTP request path constructors for the Tables service.
+//
+// Command:
+// $ goa gen github.com/lawrencejones/pgsink/api/design -o api
+
+package server
+
+// ListTablesPath returns the URL path to the Tables service List HTTP endpoint.
+func ListTablesPath() string {
+	return "/tables"
+}
